# kb-vectorizer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pipeline_checkpoint.json  pyproject.toml
src/kb_vectorizer/: cli.py  cli_deperecated.py  config.py
src/kb_vectorizer/chunking/: interfaces.py  recursive_token_chunker.py
src/kb_vectorizer/embedding/: __init__.py  cloud_embedder.py  google_embedder.py  interfaces.py  local_embedder.py  sentence_tranformers_embedder.py  sentence_transformers_embedder.py
src/kb_vectorizer/fusion/: interfaces.py  rrf_fusor.py
src/kb_vectorizer/ingestion/: interfaces.py  mysql_ingestor.py
src/kb_vectorizer/pipeline/: indexer.py  ingest_pipeline.py  retrieval_pipeline.py  retrieval_pipeline_hybrid.py  retrieval_pipeline_merged.py  stream_ingest_pipeline.py
src/kb_vectorizer/postprocessing/: postprocess.py
src/kb_vectorizer/preprocessing/: __init__.py  html_preprocessor.py  interfaces.py  json_to_html_processor.py
src/kb_vectorizer/rerank/: hf_crossencoder_reranker.py  interfaces.py  mmr_reranker.py
src/kb_vectorizer/retrieval/: __init__.py  inmemory_keyword_index.py  interfaces.py  keyword_index.py  native_keyword_index.py  orchestrator.py
src/kb_vectorizer/storage/: __init__.py  chroma_client_factory.py  chromadb_store.py  interfaces.py  qdrant_client_factory.py  qdrant_store.py
src/kb_vectorizer/text/: __init__.py  tokenizer.py
src/kb_vectorizer/utils/: _json_default.py  checkpoint.py  checkpoint_v2.py  retry.py
tests/: test_chunker.py  test_cli.py  test_embedding.py  test_fusion.py  test_mysql_ingestor.py  test_postprocess.py  test_preprocessing.py  test_rerank.py  test_retrieval.py  test_smoke.py  test_storage.py  test_tokenizer.py
