[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kb-vectorizer"
version = "0.1.0"
description = "Vectorize knowledge bases: ingest, chunk, embed, and index."
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-YourCo-Internal"
license-files = ["LICENSE"]
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["nlp", "embeddings", "vector search", "retrieval", "kb"]
classifiers = [
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Private :: Do Not Upload"
]

dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "sentence-transformers>=5.1.0",
  "chromadb>=1.0.20",
  "sqlalchemy>=2.0.43",
  "asyncmy>=0.2.10",
  "torch>=2.8.0",
  "pymysql>=1.1.1",
  "tenacity<9.0.0, >=8.2.2",
  "beautifulsoup4>=4.13.4",
  "markdownify>=1.2.0",
  "bleach>=6.2.0",
  "cryptography>=45.0.6",
  "tiktoken>=0.11.0"
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10", "pre-commit>=3.7"]
cpu = ["torch"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[project.scripts]
kb-vectorizer = "kb_vectorizer.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 150
target-version = "py310"
select = ["E","F","I","UP","B","D","TID252"]
ignore = ["D100","D104"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/kb_vectorizer"]
